--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,5 +1,9 @@
 2004-09-17  Corinna Vinschen  <corinna@vinschen.de>
 
+	* syscalls.cc (unlink): Don't use "delete on close" on remote shares.
+
+2004-09-17  Corinna Vinschen  <corinna@vinschen.de>
+
 	* cygwin.din (_impure_ptr): And export again. There are libs out there.
 
 2004-09-16  Corinna Vinschen  <corinna@vinschen.de>
