--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-20  Christopher Faylor  <cgf@timesys.com>
+
+	* exceptions.cc (sig_handle_tty_stop): Set flag that we are in a cygwin
+	function to avoid a probably erroneous stack walk.
+
 2004-09-17  Corinna Vinschen  <corinna@vinschen.de>
 
 	* syscalls.cc (unlink): Don't use "delete on close" on remote shares.
