--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -9,7 +9,7 @@
 
 2004-09-17  Corinna Vinschen  <corinna@vinschen.de>
 
-	* cygwin.din (_impure_ptr): And export again. There are libs out there.
+	* cygwin.din (_impure_ptr): Add export again. There are libs out there.
 
 2004-09-16  Corinna Vinschen  <corinna@vinschen.de>
 
